--- a/style.css
+++ b/style.css
@@ -24,7 +24,32 @@
   }
 
 #farbe:hover {
-  background-color: blue;
+  background-color: rgb(0, 0, 0);
     transition: ease 0s all;
+
+}
+
+.neues {
+display: flex;
+margin: auto;
+margin-top: 50px;
+color: whitesmoke;
+background-color: rgb(0, 0, 0);
+font-size: medium;
+border-radius:25px;
+font-family: Arial, Helvetica, sans-serif
+
+}
+
+.hintergrund {
+
+  background-color: grey;
+}
+
+.ueberschrift {
+
+display:flex;
+justify-content: center;
+margin-bottom: -50px;
 
 }
