--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
   
   .container>div {
     border: 1px solid rgb(0, 0, 0);
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     transition: ease 99999999999999999s all
   }
   
@@ -25,7 +25,7 @@
 
 #farbe:hover {
   background-color: rgb(0, 0, 0);
-    transition: ease 0s all;
+    transition: ease 50ms all;
 
 }
 
