--- a/style.css
+++ b/style.css
@@ -1,55 +1,57 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 75px;
-    
-  }
-  
-  .container>div {
-    border: 1px solid rgb(0, 0, 0);
-    height: 30px;
-    width: 30px;
-    transition: ease 99999999999999999s all
-  }
-  
-  .container>div:nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
-  }
+  box-sizing: border-box;
+}
 
-#farbe:hover {
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 75px;
+  width: max-content;
+  max-width: 610px;
+  margin: auto;
+  counter-reset:divs;
+}
+
+.container > div::before {
+  counter-increment:divs;
+  margin:auto;
+}
+
+.container > div {
+  border: 1px solid rgb(0, 0, 0);
+  height: 40px;
+  width: 40px;
+  transition: ease 99999999999999999s all;
+  box-sizing: border-box;
+  display:grid;
+}
+
+.farbe:hover {
   background-color: rgb(0, 0, 0);
-    transition: ease 50ms all;
+  transition: ease 0s all;
+}
 
+.farbe {
+  display: inline-block;
+  box-sizing: border-box;
 }
 
 .neues {
-display: flex;
-margin: auto;
-margin-top: 50px;
-color: whitesmoke;
-background-color: rgb(0, 0, 0);
-font-size: medium;
-border-radius:25px;
-font-family: Arial, Helvetica, sans-serif
-
+  display: flex;
+  margin: auto;
+  margin-top: 50px;
+  color: whitesmoke;
+  background-color: rgb(0, 0, 0);
+  font-size: medium;
+  border-radius: 25px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .hintergrund {
-
   background-color: grey;
 }
 
 .ueberschrift {
-
-display:flex;
-justify-content: center;
-margin-bottom: -50px;
-
+  display: flex;
+  justify-content: center;
 }
